@@ -5,7 +5,7 @@ include $(GNUSTEP_MAKEFILES)/common.make
 include ../Version
 include ./Version
 
-ADDITIONAL_INCLUDE_DIRS += -I../SOPE/
+ADDITIONAL_INCLUDE_DIRS += -I../SOPE/ -D_GNU_SOURCE
 ADDITIONAL_LIB_DIRS += -L../SOPE/GDLContentStore/obj/ -lbfd
 
 SOGOD     = sogod-$(MAJOR_VERSION).$(MINOR_VERSION)
